--- a/index.css
+++ b/index.css
@@ -30,14 +30,22 @@ body {
     width: 100%;
 }
 
+.banner {
+    position: relative;
+}
+
+.banner-content {
+    position: absolute;
+}
+
 .banner:before {
-        content: "";
-        background-image: linear-gradient(#b9b9b95e,
-        rgba(56, 56, 56, 0.336));
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 50;
-        left: 0;
-        right: 0;
+    content: "";
+    background-image: linear-gradient(#b9b9b95e,
+            rgba(56, 56, 56, 0.336));
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 50;
+    left: 0;
+    right: 0;
 }
