--- a/E-CommerceWebsite/index.css
+++ b/E-CommerceWebsite/index.css
@@ -1,8 +1,9 @@
-body{
+body {
     margin: 0;
     padding: 0;
 }
-.container{
+
+.container {
     width: 900px;
     max-width: 90vw;
     margin: auto;
@@ -11,21 +12,22 @@ body{
     transition: transform .5s;
 }
 
-svg{
+svg {
     width: 30px;
 }
 
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px 0;
 }
 
-header .icon-cart{
+header .iconCart {
     position: relative;
 }
-header .icon-cart span{
+
+header .iconCart span {
     display: flex;
     width: 30px;
     height: 30px;
@@ -39,34 +41,34 @@ header .icon-cart span{
     right: -20px;
 }
 
-.list-product .item img{
+.list-product .item img {
     width: 90%;
     filter: drop-shadow(0 50px 20px #0009);
 }
 
-.list-product{
+.list-product {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 }
 
-.list-product .item{
+.list-product .item {
     background-color: #eeeeeb;
     padding: 20px;
     border-radius: 20px;
 }
 
-.list-product .item h2{
+.list-product .item h2 {
     font-weight: 500;
     font-size: large;
 }
 
-.list-product .item .price{
+.list-product .item .price {
     letter-spacing: 7px;
     font-size: small;
 }
 
-.list-product .item button{
+.list-product .item button {
     background-color: #353432;
     color: white;
     padding: 5px 10px;
@@ -76,35 +78,38 @@ header .icon-cart span{
     cursor: pointer;
 }
 
-.cartTab{
+.cartTab {
     width: 400px;
     background-color: black;
     color: white;
     position: fixed;
-    inset:0 -400 0 auto;
+    inset: 0 -400 0 auto;
     display: grid;
     grid-template-rows: 70px 1fr 70px;
     transition: .5s;
+    border-left: 4px solid #e59400;
 }
-body.showCart .cartTab{
+
+body.showCart .cartTab {
     inset: 0 0 0 auto;
 }
 
-body.showCart .container{
+body.showCart .container {
     transform: translate(-250px);
 }
 
-.cartTab h1{
+.cartTab h1 {
     padding: 20px;
     margin: 0;
     font-weight: 300;
 }
 
-.cartTab .btn{
+.cartTab .btn {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
-.cartTab .btn button{
+
+.cartTab .btn button {
     background-color: orange;
     border: none;
     font-family: poppins;
@@ -112,44 +117,52 @@ body.showCart .container{
     cursor: pointer;
 }
 
-.cartTab .btn .close{
-    background-color: white;
+.cartTab .btn .close {
+    background-color: rgb(236, 0, 0);
 }
 
-.cartTab .listCart .item img{
+.cartTab .listCart .item img {
     width: 100%;
 }
 
-.cartTab .listCart .item{
-  display: grid;
-  grid-template-columns: 70px 150px 50px 1fr;
-  grid-area: 10px;
-  text-align: center;
-  align-items: center;
+.cartTab .listCart .item {
+    display: grid;
+    grid-template-columns: 70px 150px 50px 1fr;
+    grid-area: 10px;
+    text-align: center;
+    align-items: center;
 }
 
-.listCart .quantity{
+.listCart .quantity {
     display: inline-block;
-    width: 25px;
-    height: 25px;
-    background-color: white;
+
     color: gray;
+    display: flex;
     border-radius: 50%;
     cursor: pointer;
 }
 
-.listCart .quantity span:nth-child(2){
-    background-color: transparent;
+.listCart .quantity>span {
+    padding: 4px 7px 13px 7px;
+    width: 10px;
+    height: 7px;
+    background-color: #689F38;
+    border-radius: 35px;
     color: white;
 }
 
-.listCart .item:nth-child(even){
+.listCart .quantity span:nth-child(even) {
+    background-color: transparent;
+}
+
+.listCart .item:nth-child(even) {
     background-color: black;
 }
 
-.listCart{
+.listCart {
     overflow: auto;
 }
-.listCart::-webkit-scrollbar{
-    width: 0 ;
+
+.listCart::-webkit-scrollbar {
+    width: 0;
 }
