--- a/E-CommerceWebsite/index.css
+++ b/E-CommerceWebsite/index.css
@@ -41,34 +41,34 @@ header .iconCart span {
     right: -20px;
 }
 
-.list-product .item img {
+.listProduct .item img {
     width: 90%;
     filter: drop-shadow(0 50px 20px #0009);
 }
 
-.list-product {
+.listProduct {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 }
 
-.list-product .item {
+.listProduct .item {
     background-color: #eeeeeb;
     padding: 20px;
     border-radius: 20px;
 }
 
-.list-product .item h2 {
+.listProduct .item h2 {
     font-weight: 500;
     font-size: large;
 }
 
-.list-product .item .price {
+.listProduct .item .price {
     letter-spacing: 7px;
     font-size: small;
 }
 
-.list-product .item button {
+.listProduct .item button {
     background-color: #353432;
     color: white;
     padding: 5px 10px;
